2008-02-13  Andrew Jorgensen <andrew.jorgensen@gmail.com> 

	* src/ServiceLocator.cs, src/GiverService.cs: Replaced avahi-sharp code with
	  Mono.Zeroconf
	* src/Makefile.am, giver.mdp, configure.ac: Depends on Mono.Zeroconf instead
	  of avahi-sharp

2007-08-02  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: updated to 0.1.9

2007-08-02  Calvin Gaisford <calvinrg@gmail.com> 

	* NEWS: Updated for Release 0.1.8

2007-08-02  Calvin Gaisford <calvinrg@gmail.com> 

	* AUTHORS, MAINTAINERS: Fixed email address
	* src/PreferencesDialog.cs: fixed email address
	* src/Application.cs: Fixed about

2007-08-02  Calvin Gaisford <calvinrg@gmail.com> 

	* AUTHORS: Updated to contain Calvin and Scott
	* src/Utilities.cs, src/ServiceInfo.cs, src/TargetWindow.cs,
	  src/Logger.cs, src/GiverMenuItem.cs, src/PreferencesDialog.cs,
	  src/Defines.cs.in, src/ServiceLocator.cs, src/SendingHandler.cs,
	  src/RequestHandler.cs, src/UriList.cs, src/GiverService.cs,
	  src/Preferences.cs, src/Protocol.cs, src/Application.cs,
	  src/TransferStatusArgs.cs, src/TrayLib.cs, src/TargetService.cs,
	  src/PhotoService.cs: Changed header to MIT License
	* COPYING: Modified to MIT License
	* MAINTAINERS: Updated to contain everyone
	* NEWS: minor

2007-07-18  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: updated for next iteration

2007-07-18  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: updated to release version 0.1.7
	* NEWS: updated for release

2007-07-18  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceLocator.cs: updated to quickly load all people on the
	  network

2007-07-16  Brady Anderson <brady.anderson@gmail.com> 

	* src/PhotoService.cs: added code to requeue the avatar update if it
	  fails

2007-07-16  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs, src/RequestHandler.cs: changed buffer to 8K
	* src/Application.cs: removed notification window that was broken
	* src/TargetService.cs: changed progress notification to be time based
